--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,7 @@ spring.datasource.password=
 spring.datasource.driverClassName=org.h2.Driver
 
 spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
